--- a/src/node/Dockerfile
+++ b/src/node/Dockerfile
@@ -1,24 +1,29 @@
-FROM node:22-bookworm-slim
+ARG VARIANT=22-bookworm-slim
+FROM node:${VARIANT}
+
+ARG USERNAME=node
+ARG NPM_GLOBAL=/usr/local/share/npm-global
+ARG NODE_MODULES="@google/gemini-cli"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
-    xdg-utils \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     && rm -rf /var/lib/apt/lists/* \
     && rm -rf /tmp/*
 
-RUN mkdir -p /home/node/gemini-cli /workspace && chown -R node:node /home/node/gemini-cli /workspace
+RUN \
+    # Configure global npm install location, use group to adapt to UID/GID changes
+    if ! cat /etc/group | grep -e "^npm:" > /dev/null 2>&1; then groupadd -r npm; fi \
+    && usermod -a -G npm ${USERNAME} \
+    && umask 0002 \
+    && mkdir -p ${NPM_GLOBAL} \
+    && touch /usr/local/etc/npmrc \
+    && chown ${USERNAME}:npm ${NPM_GLOBAL} /usr/local/etc/npmrc \
+    && chmod g+s ${NPM_GLOBAL} \
+    && npm config -g set prefix ${NPM_GLOBAL} \
+    && su ${USERNAME} -c "npm config -g set prefix ${NPM_GLOBAL}" \
+    # Install global npm packages
+    && su ${USERNAME} -c "umask 0002 && npm install -g ${NODE_MODULES}" \
+    && npm cache clean --force > /dev/null 2>&1
 
-WORKDIR /home/node/gemini-cli
-
-COPY --chown=node:node package.json package-lock.json ./
-
-USER node
-
-RUN npm install --production
-
-ENV PATH /home/node/gemini-cli/node_modules/.bin:$PATH
-
-WORKDIR /workspace
-
-CMD [ "bash" ]
+ENV PATH=/usr/local/share/npm-global/bin:$PATH
