feat: Update TypeScript Node.js Dockerfile and build configuration
- Refactor TypeScript Node.js Dockerfile to install global npm packages.
- Update build.conf to use 'IMAGE' and 'VARIANT' instead of 'BASE_IMAGE' and 'BASE_IMAGE_VERSION'.

--- a/src/typescript-node/Dockerfile
+++ b/src/typescript-node/Dockerfile
@@ -1,24 +1,6 @@
-FROM mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm
+ARG VARIANT=22-bookworm
+FROM mcr.microsoft.com/devcontainers/typescript-node:${VARIANT}
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    git \
-    xdg-utils \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm -rf /tmp/*
-
-RUN mkdir -p /home/node/gemini-cli /workspace && chown -R node:node /home/node/gemini-cli /workspace
-
-WORKDIR /home/node/gemini-cli
-
-COPY --chown=node:node package.json package-lock.json ./
-
-USER node
-
-RUN npm install --production
-
-ENV PATH /home/node/gemini-cli/node_modules/.bin:$PATH
-
-WORKDIR /workspace
-
-CMD [ "bash" ]
+ARG NODE_MODULES="@google/gemini-cli"
+RUN su node -c "umask 0002 && npm install -g ${NODE_MODULES}" \
+    && npm cache clean --force > /dev/null 2>&1
