refactor: Update docker-compose for user config and volume caching
- Mount ~/.gitconfig for Git user configuration.
- Use ~/.gemini_user and ~/.env.gemini for consistent user-specific file paths.
- Add :cached option to workspace volume for improved performance.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,9 @@ services:
     image: naoyoshinori/gemini-cli:0.1-node
     working_dir: /workspace
     volumes:
-      - .:/workspace
-      - ./.gemini_user:/home/node/.gemini
+      - ~/.gitconfig:/home/node/.gitconfig
+      - ~/.gemini_user:/home/node/.gemini
+      - .:/workspace:cached
     env_file:
-      - ./.env.gemini
+      - ~/.env.gemini
     command: ["sleep", "infinity"]
