fix: Update docker-compose.yaml for Gemini CLI
- Remove explicit 'user: node' as it's not necessary.
- Correct the volume mount for Gemini user configuration from '~/.gemini_user' to '~/.gemini'.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,10 @@
 services:
   gemini-cli:
     image: naoyoshinori/gemini-cli:0.1-node
-    user: node
     working_dir: /workspace
     volumes:
       - ~/.gitconfig:/home/node/.gitconfig
-      - ~/.gemini_user:/home/node/.gemini:cached
+      - ~/.gemini:/home/node/.gemini:cached
       - .:/workspace:cached
     env_file:
       - ~/.env.gemini
