--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -20,14 +20,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.DOCKER_IMAGE_REGISTRY }}
-          username: ${{ secrets.DOCKER_REGISTRY_USER }}
+          registry: ${{ vars.DOCKER_IMAGE_REGISTRY }}
+          username: ${{ vars.DOCKER_REGISTRY_USER }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
       - name: Build and Push Docker Images
         run: |
-          export DOCKER_IMAGE_REGISTRY=${{ secrets.DOCKER_IMAGE_REGISTRY }}
-          export DOCKER_REGISTRY_USER=${{ secrets.DOCKER_REGISTRY_USER }}
+          export DOCKER_IMAGE_REGISTRY=${{ vars.DOCKER_IMAGE_REGISTRY }}
+          export DOCKER_REGISTRY_USER=${{ vars.DOCKER_REGISTRY_USER }}
           export DOCKER_REGISTRY_PASSWORD=${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
           VARIANTS=("typescript-node" "javascript-node" "node")
