feat(release): Update default Node.js version to 24
Updates the default image variants in the release workflow to use Node.js version 24 instead of 22.

- `node:24-bookworm-slim` is now the default and main image.
- `javascript-node:24-bookworm` is now the default.
- `typescript-node:24-bookworm` is now the default.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,12 +21,13 @@ jobs:
       matrix:
         include:
           - { base_image: "node", variant: "24-bookworm" }
-          - { base_image: "node", variant: "24-bookworm-slim" }
+          - { base_image: "node", variant: "24-bookworm-slim", is_default: true, is_main: true }
           - { base_image: "node", variant: "22-bookworm" }
-          - { base_image: "node", variant: "22-bookworm-slim", is_default: true, is_main: true }
-          - { base_image: "javascript-node", variant: "24-bookworm", registry: "mcr.microsoft.com/devcontainers/" }
-          - { base_image: "javascript-node", variant: "22-bookworm", registry: "mcr.microsoft.com/devcontainers/", is_default: true }
-          - { base_image: "typescript-node", variant: "22-bookworm", registry: "mcr.microsoft.com/devcontainers/", is_default: true }
+          - { base_image: "node", variant: "22-bookworm-slim" }
+          - { base_image: "javascript-node", variant: "24-bookworm", registry: "mcr.microsoft.com/devcontainers/", is_default: true }
+          - { base_image: "javascript-node", variant: "22-bookworm", registry: "mcr.microsoft.com/devcontainers/" }
+          - { base_image: "typescript-node", variant: "24-bookworm", registry: "mcr.microsoft.com/devcontainers/", is_default: true }
+          - { base_image: "typescript-node", variant: "22-bookworm", registry: "mcr.microsoft.com/devcontainers/" }
 
     steps:
       - name: Checkout repository
